--- a/index.html
+++ b/index.html
@@ -8,6 +8,44 @@
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
+      media="print"
+      onload="this.media='all'"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/assets/shared/logo2.webp"
+      type="image/webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/assets/carousel/1.webp"
+      type="image/webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://cdn.dummyjson.com/product-images/smartphones/vivo-s1/1.webp"
+      type="image/webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://cdn.dummyjson.com/product-images/home-decoration/plant-pot/1.webp"
+      type="image/webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://cdn.dummyjson.com/product-images/kitchen-accessories/yellow-peeler/1.webp"
+      type="image/webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://cdn.dummyjson.com/product-images/furniture/wooden-bathroom-sink-with-mirror/1.webp"
+      type="image/webp"
     />
     <title>Palestino</title>
   </head>
