--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       onload="this.media='all'"
     />
     <link
+      rel="preconnect"
+      href="https://humorous-shiner-39.clerk.accounts.dev"
+      crossorigin
+    />
+    <link
       rel="preload"
       as="image"
       href="/assets/shared/logo2.webp"
@@ -26,25 +31,25 @@
     <link
       rel="preload"
       as="image"
-      href="https://cdn.dummyjson.com/product-images/smartphones/vivo-s1/1.webp"
+      href="https://cdn.dummyjson.com/product-images/smartphones/vivo-s1/thumbnail.webp"
       type="image/webp"
     />
     <link
       rel="preload"
       as="image"
-      href="https://cdn.dummyjson.com/product-images/home-decoration/plant-pot/1.webp"
+      href="https://cdn.dummyjson.com/product-images/home-decoration/plant-pot/thumbnail.webp"
       type="image/webp"
     />
     <link
       rel="preload"
       as="image"
-      href="https://cdn.dummyjson.com/product-images/kitchen-accessories/yellow-peeler/1.webp"
+      href="https://cdn.dummyjson.com/product-images/kitchen-accessories/yellow-peeler/thumbnail.webp"
       type="image/webp"
     />
     <link
       rel="preload"
       as="image"
-      href="https://cdn.dummyjson.com/product-images/furniture/wooden-bathroom-sink-with-mirror/1.webp"
+      href="https://cdn.dummyjson.com/product-images/furniture/wooden-bathroom-sink-with-mirror/thumbnail.webp"
       type="image/webp"
     />
     <title>Palestino</title>
